# pet_os

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README  README.md  i386.json  i686.json  rust-toolchain.toml  rustc-ice-2023-12-09T14:53:53.807979336Z-64808.txt
.cargo/: config  config.toml
asm/: ata_disk.asm  entry.asm  entry_grub.asm  format.inc  interceptors.asm  linker.inc
asm/include/: Grub.asm  Kernel.asm  MMU.asm  Page.asm  String.asm  Types.asm
drivers/: Cargo.toml  ata.asm  keyboard.asm  vga.asm
drivers/.cargo/: config.toml
drivers/ata/: Cargo.toml  Makefile.toml
drivers/ata/src/: ide.rs  main.rs
drivers/fat/: Cargo.toml
drivers/fat/.cargo/: config.toml
drivers/fat/src/: boot_sector.rs  bpb.rs  dir_entry.rs  file.rs  fs.rs  main.rs  table.rs  time.rs
drivers/keyboard/: Cargo.toml
drivers/keyboard/src/: main.rs  pc.rs  ps.rs
drivers/vga/: Cargo.toml
drivers/vga/src/: main.rs
kernel/: .gitignore  Cargo.toml  build.rs
kernel-lib/: Cargo.toml
kernel-lib/src/: lib.rs  log.rs  logging.rs  rt.rs  string.rs
kernel-lib/src/alloc/: mod.rs
kernel-lib/src/allocator/: mod.rs
kernel-lib/src/drivers/: mod.rs
kernel-lib/src/fs/: index_node.rs  mod.rs
kernel-lib/src/io/: batch.rs  block.rs  char.rs  error.rs  mod.rs  transaction.rs
kernel-lib/src/object/: event.rs  mod.rs  mutex.rs
kernel-lib/src/object/kernel_buf/: kernel.rs  mod.rs  user.rs
kernel-lib/src/process/: mod.rs
kernel-lib/src/rt/: mod.rs
kernel-lib/src/task/: mod.rs
kernel/src/: error.rs  pet_os.rs
kernel/src/boot/: mod.rs  properties.rs
kernel/src/common/: atomics.rs  io.rs  logging.rs  mod.rs  spin_box.rs  time.rs
kernel/src/drivers/: api.rs  auto_load.rs  dev_fs.rs  error.rs  fat_fs.rs  loader.rs  mod.rs  module_info.rs  module_task.rs  vga.rs
kernel/src/drivers/disk/: ide.rs  mod.rs
kernel/src/drivers/management/: mod.rs
kernel/src/drivers/memory/: mod.rs
kernel/src/drivers/network/: mod.rs
kernel/src/drivers/vga/: mod.rs  mod.rs.bak  rtc.rs
kernel/src/file_system/: mod.rs  super_block.rs
kernel/src/file_system/fat/: mod.rs
kernel/src/fs/: error.rs  file.rs  file_lookup_work.rs  file_work.rs  fs_work.rs  index_node.rs  mod.rs  mount_point.rs  path.rs  super_block.rs  system_fs.rs  work.rs
kernel/src/fs/fat/: mod.rs
kernel/src/interrupts/: lock.rs  mod.rs  object.rs  pic.rs  system.rs
kernel/src/io/: irq.rs  lock.rs  mod.rs  object.rs  pic.rs  system.rs
kernel/src/io/block/: device.rs  mod.rs  work.rs
kernel/src/io/char/: device.rs
kernel/src/io/irq/: chain.rs  context.rs  event.rs  hook.rs  mod.rs
kernel/src/memory/: arch.rs  context.rs  mapping.rs  mod.rs  page.rs  process.rs  region.rs
kernel/src/memory/allocators/: global.rs  mod.rs  physical.rs  system.rs
kernel/src/memory/allocators/physical/: buddy.rs  mod.rs  page.rs
kernel/src/memory/allocators/system/: allocator.rs  mod.rs  object.rs  slab.rs  slab_entry.rs  slab_head.rs  tree.rs
kernel/src/memory/paging/: directory.rs  marker.rs  mod.rs  table.rs
kernel/src/memory/process/: builder.rs  mod.rs  segment.rs
kernel/src/object/: event.rs  handle.rs  mod.rs  queue.rs  runtime.rs  user_handle.rs  work.rs
kernel/src/process/: clocks.rs  mod.rs  pid.rs  scheduler.rs
kernel/src/task/: clocks.rs  context.rs  event.rs  fs.rs  futex.rs  mod.rs  mutex.rs  pid.rs  priority.rs  scheduler.rs  state.rs
kernel/src/task/scheduler/: lock.rs  mod.rs  queue.rs
kernel/src/task/state/: mod.rs  running.rs
kernel/src/user/: mod.rs
kernel/src/user/exchange/: mod.rs
kernel/src/user/kernel_buf/: mod.rs
kernel/src/user/queue/: api.rs  mod.rs
kernel/src/user/syscall/: mod.rs
kernel/src/utils/: atomics.rs  hash_table.rs  io.rs  logging.rs  mod.rs  singly_linked_list.rs  spin_box.rs  string.rs  time.rs
kernel_macro/: Cargo.toml
kernel_macro/src/: lib.rs
kernel_macro/tests/: attributes.rs  derrives.rs
kernel_types/: Cargo.toml
kernel_types/src/: drivers.rs  lib.rs  object.rs  string.rs  syscall.rs  task.rs
kernel_types/src/arch/: mod.rs
kernel_types/src/collections/: doubly_linked_list.rs  hash_table.rs  mod.rs  queue.rs  singly_linked_list.rs
kernel_types/src/drivers/: header.rs  mod.rs  module.rs
kernel_types/src/fs/: file.rs  file_lookup_op.rs  file_op.rs  fs_op.rs  index_node.rs  mod.rs  super_block.rs
kernel_types/src/io/: block.rs  char.rs  handle.rs  irq_handler.rs  mem_buf.rs  mod.rs  op.rs  remap.rs
kernel_types/src/io/block/: device.rs  mod.rs
kernel_types/src/object/: event.rs  handle.rs  mod.rs  queue.rs  status.rs
kernel_types/src/string/: mod.rs
kernel_types/src/syscall/: file_op.rs  mod.rs
kernel_types/src/syscall/drivers/: mod.rs
scripts/: .gitignore  asm_compiler.sh  bochs-config.bxrc  bochs-debug.sh  bochs-run.sh  build_drivers.sh  grub.cfg  kernel.ld  target.json
src/: kernel.rs  memory.rs  paging.rs  pet-os.rs  pet_os.rs  utils.rs
src/drivers/: mod.rs  vga.rs
src/file_system/: mod.rs
src/interrupts/: lock.rs  mod.rs  object.rs  pic.rs  system.rs
src/memory/: allocators.rs  arch.rs  atomics.rs  mod.rs  paging.rs  process.rs
src/memory/allocators/: global.rs  kernel.rs  mapper_list.rs  mod.rs  page.rs  physical.rs  system.rs  utils.rs
src/memory/paging/: mod.rs  table.rs
src/process/: clocks.rs  mod.rs  pid.rs  scheduler.rs
src/utils/: atomics.rs  doubly_linked_list.rs  hash_table.rs  io.rs  list.rs  logging.rs  mod.rs  singly_linked_list.rs  spin_box.rs  string.rs  vga.rs
