[workspace]
members = [
    "kernel_macro", "kernel_types", "kernel"
]

resolver = "2"

[workspace.dependencies]
kernel-types = { path = "kernel_types" }
kernel-macro = { path = "kernel_macro" }

spin = "0.9.8"
strum_macros = { version = "0.25.0" }
thiserror-no-std = { version = "2.0.2" }
crc = "3.0.1"
static_assertions = "1.1.0"
volatile = "0.2.6"
bitfield = "0.14.0"
pc-keyboard = "0.7.0"
paste = "1.0.14"
num_enum = { version = "0.7.2", default-features = false }
fallible_collections = { version = "0.4.9", features = ["hashbrown"] }
elf_rs = { version = "0.3.1" }
multiboot2 = { version = "0.20" }
multiboot = { version = "0.8" }
log = { version = "0.4.20" }
#generic-array = { version = "1.0.0", features = ["const-default"]}
#bitflags = "2.3.3"
##alloca = "0.3.4"
#impl_ops = "0.1.1"
