[package]
name = "kernel-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = { version = "0.7", default-features = false }
kernel-types = { workspace = true }
log = { version = "0.4" }
spin.workspace = true
thiserror-no-std.workspace = true


[features]
default = ["driver", "alloc"]
driver = []
alloc = []
