[package]
name = "kernel-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
generic-array = "1.2.0"
heapless = { version = "0.7", default-features = false }
kernel-types = { workspace = true }
log = { version = "0.4" }
spin.workspace = true
talc = "4.4.2"
thiserror-no-std.workspace = true
typenum = "1.18.0"


[features]
default = ["driver", "alloc"]
driver = []
alloc = []
