[package]
name = "kernel-types"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror-no-std = { workspace = true }
static_assertions = { workspace = true }
num_enum = { workspace = true }
fallible_collections = { workspace = true }
bitfield = { workspace = true }
paste = { workspace = true }
